Fix/acs 12025 [Test Stabilization for Alfresco Share CI Pipeline] (#1368)
* [ACS-12025][AGS] Enhance test framework reliability with AI-healing

* [ACS-12025][AGS] Improve AI healing scripts for test

* [ACS-12025][AGS] Improve AI healing scripts for test

* [ACS-12025][AGS] Merged Master into this branch

* [ACS-12025][AGS] Share Regression CI Run

* [ACS-12025][AGS] Share Regression CI Run

* [ACS-12025][AGS] Implementing suggested modifications

* [ACS-12025][AGS] Implementing suggested modifications

* [ACS-12025][AGS] Implementing suggested modification and fix failing tests

* [ACS-12025] Running only the verifySearch test case

* [ACS-12025][AGS] Refined test suite

* [ACS-12025][AGS] Refined test suite

* [ACS-12025][AGS] Update build configuration and refine test suite